fixing alignment problems

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,6 +4,7 @@
   "user_description": "Try hundreds of services from businesses and professionals for free!",
   "provider_description": "You'll leave here with an impressive portfolio (to improve this)",
   "signup": "Sign up for free",
+  "name": "first and last name",
   "aboutus": "Who are we?",
   "pricing": "Pricing",
   "myAccount": "My account",
